GH-147 Add placeholders system and use duration for set time in configuration. (#147)
* Add placeholders system and use duration for set time in configuration.

* Resolve conflicts.

* Add this keyword.